--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#E8EAF6"
     tools:context=".chat.ChatFragment">
 
     <ListView
@@ -14,6 +15,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:divider="#00FFFFFF"
+        android:dividerHeight="4dp"
+        android:footerDividersEnabled="true"
+        android:headerDividersEnabled="true"
         android:paddingBottom="8dp" />
 
     <LinearLayout
@@ -21,9 +26,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_toEndOf="@id/messages_view"
+        android:background="#FFFFFF"
         android:orientation="horizontal">
 
         <com.google.android.material.textfield.TextInputLayout
@@ -32,12 +38,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|start|left"
             android:layout_weight="1"
+            android:background="#FFFFFF"
             android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
+                android:id="@+id/message_field"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 android:backgroundTint="#00FFFFFF"
                 android:cursorVisible="true"
