--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/linearLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:background="@drawable/rounded_view">
     <TextView
         android:id="@+id/message_tv"
         android:layout_width="wrap_content"
@@ -19,7 +19,7 @@
         android:layout_marginBottom="8dp"
         android:text="TextView"
         android:textColor="#000000"
-        android:textSize="16sp" />
+        android:textSize="16sp"/>
 
     <TextView
         android:id="@+id/message_date_tv"
