--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -19,13 +19,10 @@
         android:dividerHeight="4dp"
         android:footerDividersEnabled="true"
         android:headerDividersEnabled="true"
-        android:padding="8dp"
         android:paddingStart="8dp"
         android:paddingLeft="8dp"
-        android:paddingTop="8dp"
         android:paddingEnd="8dp"
         android:paddingRight="8dp"
-        android:paddingBottom="8dp"
         android:scrollbarSize="0dp"
         android:stackFromBottom="true"
         android:transcriptMode="normal" />
@@ -61,9 +58,17 @@
             android:backgroundTint="#00FFFFFF"
             android:cursorVisible="true"
             android:hint="Message"
-            android:inputType="textAutoCorrect"
+            android:inputType="textShortMessage|textLongMessage|textAutoCorrect|textMultiLine|textCapSentences"
+            android:isScrollContainer="true"
+            android:maxLines="3"
+            android:overScrollMode="never"
+            android:scrollbars="vertical"
+            android:scrollHorizontally="false"
+            android:singleLine="true"
             android:textColorHighlight="#17FFFFFF"
-            android:textColorLink="#00FFFFFF" />
+            android:textColorHint="#00FFFFFF"
+            android:textColorLink="#00FFFFFF"
+            android:textCursorDrawable="@color/colorMessageViewRight" />
 
         <ImageButton
             android:id="@+id/chat_send_btn"
