--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/message_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_columnWeight="1"
     android:layout_centerVertical="false"
     android:layout_marginVertical="2dp"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:paddingLeft="4dp"
     android:paddingRight="60dp">
 
@@ -48,5 +49,12 @@
             app:layout_constraintStart_toEndOf="@+id/message_tv" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_weight="1"
+        android:text="TextView" />
 
 </LinearLayout>
