--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -13,13 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_layout"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:divider="#00FFFFFF"
         android:dividerHeight="0dp"
+        android:nestedScrollingEnabled="true"
+        android:overScrollMode="always"
         android:scrollbarSize="0dp"
-        android:stackFromBottom="true" />
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll" />
 
     <LinearLayout
         android:id="@+id/bottom_layout"
